# crystalline

./: Cargo.toml
.run/: build.run.xml  run.run.xml  setcap.run.xml
clients/qml/: app.qml
clients/web/: index.html  main.js  style.css
scripts/: setcap.sh
src/: main.rs
src/helpers/: debug.rs  display.rs
src/structs/: connection.rs  mod.rs  process.rs  receivers.rs
src/threads/: capture.rs  connections.rs  mod.rs  processes.rs
