[package]
name = "crystalline"
version = "0.1.0"
authors = ["Jan Keith Darunday <jkcdarunday@gmail.com>"]
edition = "2018"

[dependencies]
pcap = "0.7.0"
etherparse = "0.8.2"
scan_fmt = "0.2.2"
hex = "0.3.2"
custom_error = "1.6.0"
actix-web = "1.0.8"
json = "0.12.0"
serde_derive = "1.0.102"
serde_json = "1.0.41"
serde = "1.0.102"
actix-cors = "0.1.0"
single_value_channel = "1.2.1"
procfs = "0.7.1"
libc = "0.2.65"
