[package]
name = "crystalline"
version = "0.1.0"
authors = ["Jan Keith Darunday <github@jkcdarunday.mozmail.com>"]
edition = "2018"

[dependencies]
pcap = "1.1.0"
etherparse = "0.13.0"
scan_fmt = "0.2.6"
hex = "0.4.3"
custom_error = "1.9.2"
actix-web = "4.3.1"
json = "0.12.4"
serde_derive = "1.0.183"
serde_json = "1.0.104"
serde = "1.0.183"
actix-cors = "0.6.4"
single_value_channel = "1.2.2"
procfs = "0.15.1"
libc = "0.2.147"
