[package]
name = "crystalline"
version = "0.1.0"
authors = ["Jan Keith Darunday <github@jkcdarunday.mozmail.com>"]
edition = "2018"

[dependencies]
pcap = "2.2.0"
etherparse = "0.16.0"
scan_fmt = "0.2.6"
hex = "0.4.3"
custom_error = "1.9.2"
actix-web = "4.9.0"
json = "0.12.4"
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde = "1.0.210"
actix-cors = "0.7.0"
single_value_channel = "1.2.2"
procfs = "0.16.0"
libc = "0.2.159"
rusqlite = { version = "0.32.1", features = ["bundled"] }
